# Content-Wiz

./: .gitattributes  .gitignore  AUDIT_LOG.md  CHANGELOG.md  GLOSSARY.md  README.md  RESOURCES.md  agents.md  bulk_template.csv  config.json  config.py  generate.py  lint_content.py  llm.py  plan.md  publish_tracker_template.csv  pyproject.toml  templates.py  test_generate.py  textprompts.py
data/: HARO_DataBank.csv  HARO_DataBank_PENDING.csv
hooks/: pre-commit
prompts/: ABM_Content_Prompt.txt  ASO_Copy_Prompt.txt  Annual_Report_Prompt.txt  Backlink_Outreach_Email_Prompt.txt  Bing_Ads_Prompt.txt  Blog_Suggestion_Prompt.txt  Blog_Writing_Prompt.txt  Brand_Voice_Style_Guide_Prompt.txt  Buyer_Persona_Prompt.txt  Case_Study_Prompt.txt  Chatbot_Flow_Prompt.txt  Community_Welcome_Prompt.txt  Competitive_Battlecard_Prompt.txt  Competitor_Content_Gap_Prompt.txt  Content_Brief_Prompt.txt  Content_Calendar_Prompt.txt  Course_Training_Description_Prompt.txt  Customer_Success_Email_Prompt.txt  DevTo_Hashnode_Prompt.txt  Email_Drip_Sequence_Prompt.txt  FAQ_Prompt.txt  Facebook_Organic_Post_Prompt.txt  GEO_Prompt.txt  GMB_Prompt.txt  Google_Ads_Prompt.txt  Guest_Article_Pitch_Prompt.txt  HARO_DataBank_Builder_Prompt.txt  HARO_Prompts.txt  Image_Alt_Text_Prompt.txt  Instagram_Content_Prompt.txt  Instagram_Prompt.txt  Interactive_Content_Prompt.txt  Internal_Linking_Prompt.txt  Landing_Page_Copy_Prompt.txt  Lead_Magnet_Prompt.txt  LinkedIn_Ads_Prompt.txt  LinkedIn_Article_Prompt.txt  LinkedIn_Carousel_Prompt.txt  LinkedIn_Newsletter_Prompt.txt  LinkedIn_Post_Prompt.txt  (+40 more)
strategies/: strategy-abm.md  strategy-ai-search.md  strategy-bing-ads.md  strategy-case-studies.md  strategy-chatbot.md  strategy-community-building.md  strategy-competitive-analysis.md  strategy-content-repurposing.md  strategy-crisis-comms.md  strategy-cro.md  strategy-discord.md  strategy-editorial-seo.md  strategy-email-newsletter.md  strategy-employer-branding.md  strategy-events-webinar.md  strategy-gated-content.md  strategy-gmb.md  strategy-google-ads.md  strategy-guest-articles.md  strategy-haro.md  strategy-influencer-collabs.md  (+30 more)
(+95 files in other folders)
