[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "content-wiz"
version = "0.2.0"
description = "Multi-brand content-distribution prompt generator (single + bulk, optional LLM generation)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
# Only needed for `--generate` (live LLM content). Core tool has zero deps.
# Install just the provider(s) you use, e.g. `pip install .[llm-anthropic]`.
llm-anthropic = ["anthropic>=0.40"]
llm-gemini = ["google-generativeai>=0.8"]
llm-openai = ["openai>=1.40"]
llm = ["anthropic>=0.40", "google-generativeai>=0.8", "openai>=1.40"]
dev = ["ruff>=0.6"]

[project.scripts]
content-wiz = "generate:main"

[tool.setuptools]
py-modules = ["generate", "textprompts", "llm", "config", "lint_content"]
packages = ["templates"]

[tool.ruff]
line-length = 120
# templates/ is generated-style long-string content; skip style noise there.
extend-exclude = ["templates", "output"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
